# jacamar

./: .gitignore  .readthedocs.yaml  AUTHORS.md  README.md  pyproject.toml
docs/doctrees/: api.doctree  environment.pickle  index.doctree  usage.doctree
docs/html/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
docs/html/_sources/: usage.rst.txt
docs/source/: conf.py  index.rst  usage.rst
jacamar/: __init__.py  constants.py
jacamar/matrices/: matrices.py
jacamar/matrices/tests/: test_matrices.py
jacamar/rings/: complexes.py  integers.py  intmod.py  polynomials.py  rationals.py  reals.py  rings.py  series.py
jacamar/rings/tests/: test_complexes.py  test_integers.py  test_intmod.py  test_morphisms.py  test_polynomials.py  test_rationals.py  test_reals.py  test_series.py
nuthatch/: __init__.py  constants.py
nuthatch/matrices/: matrices.py
nuthatch/matrices/tests/: test_matrices.py
nuthatch/rings/: complexes.py  cpoly.pyx  elements.py  integers.py  intmod.py  morphisms.py  polynomials.py  rationals.py  reals.py  series.py
nuthatch/rings/tests/: test_complexes.py  test_integers.py  test_intmod.py  test_polynomials.py  test_rationals.py  test_reals.py  test_series.py
source/: conf.py  index.rst
src/nuthatch/: __init__.py  constants.py  setup.py
src/nuthatch/cython/: cpoly.c  cpoly.pyx  setup.py
src/nuthatch/matrices/: cmat.pyx  matrices.py
src/nuthatch/matrices/tests/: test_matrices.py
src/nuthatch/rings/: complexes.py  cpoly.pyx  elements.py  integers.py  morphisms.py  polynomials.py  rationals.py  reals.py  rings.py  series.py  setup.py
src/nuthatch/rings/tests/: test_complexes.py  test_integers.py  test_intmod.py  test_morphisms.py  test_polynomials.py  test_rationals.py  test_reals.py  test_series.py
