[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "jacamar"
version = "0.1.0"
authors = [{name = "Benjamin Antieau", email = "antieau@northwestern.edu"}]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = {"MIT"}
license-file = {"LICENSE"}
dynamic = ["version", "description"]
dependencies = [
    "cython >=3.0.10",
    "numpy >=1.26.0",
    "python-flint >=0.8.0",
    "setuptools >=72.1.0",
]

[project.urls]
Home = "https://github.com/antieau/jacamar"

[tool.pylint."MESSAGES CONTROL"]
disable = [ "import-error"]

[tool.pytest.ini_options]
minversion = "6.0"
pythonpath = "src"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
